# oop-piscine

00-Encapsulation/ex00/: .gitignore  Account.cpp  Account.hpp  Bank.cpp  Bank.hpp  CMakeLists.txt  Makefile  main.cpp
00-Encapsulation/ex00/Tests/: AccountTests.cpp  BankTests.cpp
